--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,5 @@
-@import url(fontawesome-all.min.css);
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i");
-
 /*
 	Story by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 html, body, div, span, applet, object,
@@ -157,9 +152,9 @@ input, select, textarea {
 	}
 
 	body, input, select, textarea {
-		font-family: "Source Sans Pro", Helvetica, sans-serif;
+		font-family: "Instrument Sans", sans-serif;
 		font-size: 1rem;
-		font-weight: 300;
+		font-weight: 400;
 		line-height: 1.65;
 	}
 
@@ -192,9 +187,10 @@ input, select, textarea {
 		}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-weight: 300;
+		font-family: "Playfair Display", Georgia, serif;
+		font-weight: 700;
 		line-height: 1.375;
-		letter-spacing: -0.05em;
+		letter-spacing: 0.05em;
 		margin: 0 0 1rem 0;
 	}
 
