--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -320,7 +320,7 @@ input, select, textarea {
 	}
 
 		a:hover {
-			color: #47D3E5;
+			color: #119130;
 		}
 
 	strong, b {
@@ -2193,8 +2193,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 1px #ffffff;
-			color: #ffffff !important;
+			box-shadow: inset 0 0 0 1px #119130;
+			color: #119130 !important;
 		}
 
 		input[type="submit"]:active,
@@ -2222,7 +2222,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #ffffff;
+				background-color: #119130;
 			}
 
 			input[type="submit"].primary:active,
@@ -2612,8 +2612,8 @@ input, select, textarea {
 	}
 
 	a.icon.style2:hover:before {
-		box-shadow: inset 0 0 0 1px #ffffff;
-		color: #ffffff;
+		box-shadow: inset 0 0 0 1px #119130;
+		color: #119130;
 	}
 
 	a.icon.style2:active:before {
@@ -8309,8 +8309,8 @@ input, select, textarea {
 				#wrapper > .invert input[type="button"]:hover,
 				#wrapper > .invert button:hover,
 				#wrapper > .invert .button:hover {
-					box-shadow: inset 0 0 0 1px #ffffff;
-					color: #ffffff !important;
+					box-shadow: inset 0 0 0 1px #119130;
+					color: #119130 !important;
 				}
 
 				#wrapper > .invert input[type="submit"]:active,
@@ -8338,7 +8338,7 @@ input, select, textarea {
 					#wrapper > .invert input[type="button"].primary:hover,
 					#wrapper > .invert button.primary:hover,
 					#wrapper > .invert .button.primary:hover {
-						background-color: #ffffff;
+						background-color: #119130;
 					}
 
 					#wrapper > .invert input[type="submit"].primary:active,
@@ -8429,8 +8429,8 @@ input, select, textarea {
 			}
 
 			#wrapper > .invert a.icon.style2:hover:before {
-				box-shadow: inset 0 0 0 1px #ffffff;
-				color: #ffffff;
+				box-shadow: inset 0 0 0 1px #119130;
+				color: #119130;
 			}
 
 			#wrapper > .invert a.icon.style2:active:before {
@@ -8598,4 +8598,5 @@ input, select, textarea {
 			#wrapper.divided > .invert:first-child {
 				box-shadow: none !important;
 			}
+
 
