--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,7 +110,7 @@ input, select, textarea {
 	}
 
 	body, input, select, textarea {
-		font-family: "Instrument Sans", sans-serif;
+		font-family: "Roboto", sans-serif;
 		font-size: 1rem;
 		font-weight: 400;
 		line-height: 1.65;
@@ -6480,6 +6480,7 @@ input, select, textarea {
     padding-right: 40px;
   }
 }
+
 
 
 
