--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6589,6 +6589,7 @@ input, select, textarea {
   justify-content: center;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   color: #095a27;
+  text-decoration: none; !important;
   transition: all 0.3s ease;
 }
 
@@ -6601,6 +6602,7 @@ input, select, textarea {
   color: #888;
   font-size: 0.9rem;
 }
+
 
 
 
